add frontend and backend folder with some modifications